# Python-in-Pajamas

./: .gitignore  README.md  asciirenderer.py  pyproject.toml  pythoninpajamas.py  requirements.txt  run.bat  run.sh  terminalgui.py
pythoninpajamas/: __main__.py  asciiart.py  tui.py
